<resources>
    <string name="app_name">OW Camera 2 for Pebble</string>
    <string name="action_settings">Settings</string>
    <string name="action_popup">Popup settings</string>
    <string name="intro_ok">OK (This message won\'t show again)</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="choose_save_location">Choose save location:</string>
    <string name="clear_folder_history">Clear folder history</string>
    <string name="clear_folder_history_question">Clear folder history?</string>
    <string name="choose_another_folder">Choose another folder</string>
    <string name="changed_save_location">Changed save location to:</string>
    <string name="stopped_recording_video">Stopped recording video</string>
    <string name="repeats_to_go">repeats to go</string>
    <string name="failed_to_reconnect_camera">Failed to reconnect to camera</string>
    <string name="video_may_be_corrupted">Error, video file may be corrupted</string>
    <string name="not_supported">not supported on your device</string>
    <string name="preference_lock_orientation">Lock photo/video orientation</string>
    <string name="preference_lock_orientation_summary">If set, the orientation of the device will be ignored, and the orientation of the photo/video will be with respect to the specified orientation\n%s</string>
    <string name="preference_timer_beep">Timer beep</string>
    <string name="preference_timer_beep_summary">Beep when timer is counting down or for repeat mode delay</string>
    <string name="preference_timer_speak">Voice timer countdown</string>
    <string name="preference_timer_speak_summary">Speak the countdown for timer or repeat mode delay (from 60 seconds)</string>
    <string name="preference_touch_capture">Touch to capture</string>
    <string name="preference_touch_capture_summary">Take a photo or record video just by touching or double-tapping the preview\n%s</string>
    <string name="preference_pause_preview">Pause after taking photo</string>
    <string name="preference_pause_preview_summary">Pause the screen after taking a photo, with the option to share or delete the photo</string>
    <string name="preference_shutter_sound">Shutter sound</string>
    <string name="preference_shutter_sound_summary">Play a sound when taking a photo</string>
    <string name="preference_volume_keys">Volume keys</string>
    <string name="preference_audio_control">Audio control options</string>
    <string name="preference_audio_noise_control_sensitivity">Audio control sensitivity</string>
    <string name="preference_audio_noise_control_sensitivity_summary">Noise level sensitivity for audio (loud noise) option\n%s</string>
    <string name="preference_save_location">Save location</string>
    <string name="preference_save_location_summary">Folder to save the photo/video files in</string>
    <string name="preference_using_saf" translatable="false">Storage Access Framework</string>
    <string name="preference_using_saf_summary">Whether to use Storage Access Framework for saving photos and videos. This should be enabled to allow saving to external SD cards. On Android 10+ this option must be enabled if you want to save in a folder outside of DCIM.</string>
    <string name="preference_save_photo_prefix">Save photo prefix</string>
    <string name="preference_save_photo_prefix_summary">The prefix to use for the save filenames for photos</string>
    <string name="preference_save_video_prefix">Save video prefix</string>
    <string name="preference_save_video_prefix_summary">The prefix to use for the save filenames for videos</string>
    <string name="preference_save_zulu_time">Time format for filename</string>
    <string name="preference_save_include_milliseconds">Use milliseconds in filename</string>
    <string name="preference_save_include_milliseconds_summary">If enabled, filenames will include milliseconds</string>
    <string name="preference_show_when_locked">Show camera when locked</string>
    <string name="preference_show_when_locked_summary">If enabled, OW Camera 2 for Pebble will still show above any lockscreen (you\'ll still have to unlock to access Settings, Gallery etc)</string>
    <string name="preference_startup_focus">Perform auto-focus on startup</string>
    <string name="preference_startup_focus_summary">Whether to auto-focus when OW Camera 2 for Pebble is started. If you have the problem of flash turning on when starting, disable this option</string>
    <string name="preference_rotate_preview">Rotate preview</string>
    <string name="preference_rotate_preview_summary">Option to rotate the preview (won\'t affect resultant photos/videos)\n%s</string>
    <string name="preference_preview_size">Preview size</string>
    <string name="preference_show_zoom">Show zoom</string>
    <string name="preference_show_zoom_summary">Display the current camera zoom level on screen (when zoomed in)</string>
    <string name="preference_show_iso">Show ISO</string>
    <string name="preference_show_iso_summary">Display the current ISO level. (Requires Camera2 API.)</string>
    <string name="preference_free_memory">Show free memory</string>
    <string name="preference_free_memory_summary">Display the remaining device storage space on screen</string>
    <string name="preference_show_angle">Show angle</string>
    <string name="preference_show_angle_summary">Display the current device orientation angle on screen</string>
    <string name="preference_show_angle_line">Show angle line</string>
    <string name="preference_show_angle_line_summary">Display horizontal level line</string>
    <string name="preference_angle_highlight_color">Angle/altitude highlight color</string>
    <string name="preference_angle_highlight_color_summary">Highlight color for when camera is nearly level\n%s</string>
    <string name="preference_show_geo_direction">Show compass direction</string>
    <string name="preference_show_geo_direction_summary">Display the compass direction of the device on screen</string>
    <string name="preference_show_time">Show time</string>
    <string name="preference_show_time_summary">Display the current time on screen</string>
    <string name="preference_show_battery">Show battery</string>
    <string name="preference_show_battery_summary">Display the current battery level on screen</string>
    <string name="preference_grid">Show a grid</string>
    <string name="preference_crop_guide">Show a crop guide</string>
    <string name="preference_crop_guide_summary">A crop guide displays a rectangle showing what the specified aspect ratio looks like - useful if you plan to crop the photo/video afterwards to a different aspect ratio. Requires WYSIWYG photo mode, or being in video mode.\n%s</string>
    <string name="preference_thumbnail_animation">Show thumbnail animation</string>
    <string name="preference_thumbnail_animation_summary">Display moving thumbnail animation when taking a photo</string>
    <string name="preference_take_photo_border">Show border when taking photo</string>
    <string name="preference_take_photo_border_summary">Display a border on the display to indicate taking a photo</string>
    <string name="preference_calibrate_level">Calibrate level angle</string>
    <string name="preference_calibrate_level_summary">This option calibrates your device\'s accelerometer, so the auto-level and on-screen level/angle options work correctly</string>
    <string name="preference_show_pitch_lines">Show pitch lines</string>
    <string name="preference_show_pitch_lines_summary">Display horizontal pitch lines</string>
    <string name="preference_show_geo_direction_lines">Show compass direction lines</string>
    <string name="preference_show_geo_direction_lines_summary">Display compass direction lines</string>
    <string name="preference_ghost_image">Ghost image</string>
    <string name="preference_ghost_image_summary">Display an image over the preview, to help with alignment.\n%s</string>
    <string name="preference_show_video_max_amp">Show audio level meter</string>
    <string name="preference_show_video_max_amp_summary">Whether to show on-screen audio level when recording video</string>
    <string name="preference_focus_assist">Focus assist</string>
    <string name="preference_focus_assist_summary">Whether to zoom in when adjusting manual focus distance\n%s</string>
    <string name="preference_screen_remote_control">Bluetooth LE remote control…</string>
    <string name="preference_enable_remote">Enable Bluetooth LE remote control</string>
    <string name="preference_enable_remote_summary">Enable Bluetooth LE (BLE) remote control devices</string>
    <string name="preference_remote_type">Remote device type</string>
    <string name="preference_remote_disconnect_screen_dim">Dim screen if remote disconnects</string>
    <string name="preference_remote_disconnect_screen_dim_summary">Hint: set default brightness to minimum level before starting OW Camera 2 for Pebble.</string>
    <string name="preference_water_type">Use Saltwater for depth calculations</string>
    <string name="preference_water_type_summary">For underwater housings, improves accuracy if correct water type is selected.</string>
    <string name="preference_histogram">Show a histogram</string>
    <string name="preference_histogram_summary">Whether to display histogram of the colors shown on-screen\n%s</string>
    <string name="preference_zebra_stripes">Show zebra stripes</string>
    <string name="preference_zebra_stripes_summary">If this option is enabled, zebra stripes will be drawn on-screen showing where the camera preview is over exposed.\n%s</string>
    <string name="preference_focus_peaking">Focus peaking</string>
    <string name="preference_focus_peaking_summary">If this option is enabled, highlights will be shown on in-focus edges (contours). This is primarily useful for manual focus, and can be used to help determine which regions of the image are in focus.\n%s</string>
    <string name="preference_focus_peaking_color">Focus peaking color</string>
    <string name="preference_focus_peaking_color_summary">Which color to use for highlighting the in-focus edges\n%s</string>
    <string name="preference_audio_control_summary">Take photo/video when a noise is detected.
        When enabled, use the on-screen microphone button to start/stop listening.
        \n%s</string>
    <string name="preference_select_remote">Select remote device</string>
    <string name="preference_ghost_image_alpha">Ghost image opacity</string>
    <string name="preference_ghost_image_alpha_summary">Alpha value to use for ghost images. A lower value means more transparent, higher means more opaque.\n%s</string>
    <string name="preference_zebra_stripes_foreground_color">Zebra stripes foreground color</string>
    <string name="preference_zebra_stripes_foreground_color_summary">Color to use for the foreground stripe when showing zebra stripes.\n%s</string>
    <string name="preference_zebra_stripes_background_color">Zebra stripes background color</string>
    <string name="preference_zebra_stripes_background_color_summary">Color to use for the background stripe when showing zebra stripes.\n%s</string>
    <string name="preference_show_camera_id">Show camera ID</string>
    <string name="preference_show_camera_id_summary">Display the current camera ID number on screen</string>
    <string name="preference_allow_long_press">Allow long press actions</string>
    <string name="preference_allow_long_press_summary">Whether to allow long press actions (e.g., long press on gallery to change save location).</string>
    <string name="preference_allow_haptic_feedback">Allow vibration feedback</string>
    <string name="preference_allow_haptic_feedback_summary">Whether to allow haptic vibration feedback, for example when adjusting some controls. Note this also requires touch interactions to be enabled in your device\'s settings.</string>
</resources>