<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preferences_root">

    <ListPreference
        android:key="preference_preview_size"
        android:title="@string/preference_preview_size"
        android:summary="%s"
        android:entries="@array/preference_preview_size_entries"
        android:entryValues="@array/preference_preview_size_values"
        android:defaultValue="preference_preview_size_wysiwyg"
        />

    <ListPreference
        android:key="preference_ghost_image"
        android:title="@string/preference_ghost_image"
        android:summary="@string/preference_ghost_image_summary"
        android:entries="@array/preference_ghost_image_entries"
        android:entryValues="@array/preference_ghost_image_values"
        android:defaultValue="preference_ghost_image_off"
        />

    <com.github.jamsinclair.owcamera2.ui.ArraySeekBarPreference
        android:key="ghost_image_alpha"
        android:title="@string/preference_ghost_image_alpha"
        android:summary="@string/preference_ghost_image_alpha_summary"
        android:defaultValue="50"
        />

    <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
    <ListPreference
        android:key="preference_focus_assist"
        android:title="@string/preference_focus_assist"
        android:summary="@string/preference_focus_assist_summary"
        android:entries="@array/preference_focus_assist_entries"
        android:entryValues="@array/preference_focus_assist_values"
        android:defaultValue="0"
        />

    <CheckBoxPreference
        android:key="preference_show_zoom"
        android:title="@string/preference_show_zoom"
        android:summary="@string/preference_show_zoom_summary"
        android:defaultValue="true"
        />

    <CheckBoxPreference
        android:key="preference_show_angle"
        android:title="@string/preference_show_angle"
        android:summary="@string/preference_show_angle_summary"
        android:defaultValue="false"
        />

    <CheckBoxPreference
        android:key="preference_show_angle_line"
        android:title="@string/preference_show_angle_line"
        android:summary="@string/preference_show_angle_line_summary"
        android:defaultValue="false"
        />

    <CheckBoxPreference
        android:key="preference_show_pitch_lines"
        android:title="@string/preference_show_pitch_lines"
        android:summary="@string/preference_show_pitch_lines_summary"
        android:defaultValue="false"
        />

    <ListPreference
        android:key="preference_angle_highlight_color"
        android:title="@string/preference_angle_highlight_color"
        android:summary="@string/preference_angle_highlight_color_summary"
        android:entries="@array/preference_angle_highlight_color_entries"
        android:entryValues="@array/preference_angle_highlight_color_values"
        android:defaultValue="#14e715"
        />

    <CheckBoxPreference
        android:key="preference_show_geo_direction"
        android:title="@string/preference_show_geo_direction"
        android:summary="@string/preference_show_geo_direction_summary"
        android:defaultValue="false"
        />

    <CheckBoxPreference
        android:key="preference_show_geo_direction_lines"
        android:title="@string/preference_show_geo_direction_lines"
        android:summary="@string/preference_show_geo_direction_lines_summary"
        android:defaultValue="false"
        />

    <CheckBoxPreference
        android:key="preference_show_battery"
        android:title="@string/preference_show_battery"
        android:summary="@string/preference_show_battery_summary"
        android:defaultValue="true"
        />

    <CheckBoxPreference
        android:key="preference_show_time"
        android:title="@string/preference_show_time"
        android:summary="@string/preference_show_time_summary"
        android:defaultValue="true"
        />

    <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
    <CheckBoxPreference
        android:key="preference_show_camera_id"
        android:title="@string/preference_show_camera_id"
        android:summary="@string/preference_show_camera_id_summary"
        android:defaultValue="true"
        />

    <CheckBoxPreference
        android:key="preference_free_memory"
        android:title="@string/preference_free_memory"
        android:summary="@string/preference_free_memory_summary"
        android:defaultValue="true"
        />

    <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
    <CheckBoxPreference
        android:key="preference_show_iso"
        android:title="@string/preference_show_iso"
        android:summary="@string/preference_show_iso_summary"
        android:defaultValue="true"
        />

    <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
    <ListPreference
        android:key="preference_histogram"
        android:title="@string/preference_histogram"
        android:summary="@string/preference_histogram_summary"
        android:entries="@array/preference_histogram_entries"
        android:entryValues="@array/preference_histogram_values"
        android:defaultValue="preference_histogram_off"
        />

    <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
    <ListPreference
        android:key="preference_zebra_stripes"
        android:title="@string/preference_zebra_stripes"
        android:summary="@string/preference_zebra_stripes_summary"
        android:entries="@array/preference_zebra_stripes_entries"
        android:entryValues="@array/preference_zebra_stripes_values"
        android:defaultValue="0"
        />

    <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
    <ListPreference
        android:key="preference_zebra_stripes_foreground_color"
        android:title="@string/preference_zebra_stripes_foreground_color"
        android:summary="@string/preference_zebra_stripes_foreground_color_summary"
        android:entries="@array/preference_zebra_stripes_foreground_color_entries"
        android:entryValues="@array/preference_zebra_stripes_foreground_color_values"
        android:defaultValue="#ff000000"
        />

    <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
    <ListPreference
        android:key="preference_zebra_stripes_background_color"
        android:title="@string/preference_zebra_stripes_background_color"
        android:summary="@string/preference_zebra_stripes_background_color_summary"
        android:entries="@array/preference_zebra_stripes_background_color_entries"
        android:entryValues="@array/preference_zebra_stripes_background_color_values"
        android:defaultValue="#ffffffff"
        />

    <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
    <ListPreference
        android:key="preference_focus_peaking"
        android:title="@string/preference_focus_peaking"
        android:summary="@string/preference_focus_peaking_summary"
        android:entries="@array/preference_focus_peaking_entries"
        android:entryValues="@array/preference_focus_peaking_values"
        android:defaultValue="preference_focus_peaking_off"
        />

    <!--  if we move this to another PreferenceGroup, we should update code to remove this Preference -->
    <!-- n.b., uses same entries/values as preference_angle_highlight_color -->
    <ListPreference
        android:key="preference_focus_peaking_color"
        android:title="@string/preference_focus_peaking_color"
        android:summary="@string/preference_focus_peaking_color_summary"
        android:entries="@array/preference_angle_highlight_color_entries"
        android:entryValues="@array/preference_angle_highlight_color_values"
        android:defaultValue="#ffffff"
        />

    <CheckBoxPreference
        android:key="preference_show_video_max_amp"
        android:title="@string/preference_show_video_max_amp"
        android:summary="@string/preference_show_video_max_amp_summary"
        android:defaultValue="false"
        />

    <ListPreference
        android:key="preference_grid"
        android:title="@string/preference_grid"
        android:summary="%s"
        android:entries="@array/preference_grid_entries"
        android:entryValues="@array/preference_grid_values"
        android:defaultValue="preference_grid_none"
        />

    <ListPreference
        android:key="preference_crop_guide"
        android:title="@string/preference_crop_guide"
        android:summary="@string/preference_crop_guide_summary"
        android:entries="@array/preference_crop_guide_entries"
        android:entryValues="@array/preference_crop_guide_values"
        android:defaultValue="crop_guide_none"
        />

    <CheckBoxPreference
        android:key="preference_thumbnail_animation"
        android:title="@string/preference_thumbnail_animation"
        android:summary="@string/preference_thumbnail_animation_summary"
        android:defaultValue="true"
        />

    <CheckBoxPreference
        android:key="preference_take_photo_border"
        android:title="@string/preference_take_photo_border"
        android:summary="@string/preference_take_photo_border_summary"
        android:defaultValue="true"
        />

    <ListPreference
        android:key="preference_rotate_preview"
        android:title="@string/preference_rotate_preview"
        android:summary="@string/preference_rotate_preview_summary"
        android:entries="@array/preference_rotate_preview_entries"
        android:entryValues="@array/preference_rotate_preview_values"
        android:defaultValue="0"
        />

</PreferenceScreen>
